tests/paczka2/big_fuzzy/70136752.err
Error in line 1: wrH A519 63,7
Error in line 29: thAT7 A52 73,10
Error in line 37: XeRJtn0gzX7 A471 71,2
Error in line 47: XeRJtn0gzX7 A519 48,7
Error in line 25: thAT7 A52 62,9
Error in line 51: thAT7 S143 96,0
Error in line 63: pXyFnah A519 75,3
Error in line 70: thAT7 A519 171,8
Error in line 75: thAT7 A471 84,0
Error in line 80: ufj A471 20,2
Error in line 87: A471 A471 87,9
Error in line 90: wrH A519 82,4
Error in line 104: thAT7 A519 -2,3
Error in line 103: XeRJtn0gzX7 A471 62,4
Error in line 102: aSgW5Ctggj S143 215,5
Error in line 115: aSgW5Ctggj A52 58,8
Error in line 125: A471 A471 32,8
Error in line 122: aSgW5Ctggj S143 70,5
Error in line 133: thAT7 S143 48,m
Error in line 100: thAT7 A519 55,8
Error in line 137: pXyFnah S143 26,9
Error in line 134: thAT7 S143 132,7
Error in line 142: thAT7 A471 28,2
Error in line 153: A471 A52 92,7
Error in line 159: A471 S143 76,1
Error in line 177: ufj S143 8,2
Error in line 181: A471 A519 90,0
Error in line 184: thAT7 A519 <8,5
Error in line 190: thAT7 A519 83,62
Error in line 192: ufj A519 131,0
Error in line 198: XeRJtn0gzX7 A519 30,7
Error in line 182: A471 A52 51,6
Error in line 178: thAT7 A471 46,9
Error in line 211: wrH S143 59,43
Error in line 208: ufj S143 55,3
Error in line 216: ufj A52 22,4
Error in line 217: ufj A471 36,8
Error in line 223: ufj A41 94,9
Error in line 228: thAT7 A519 89,5
Error in line 233: ufj A52 9,50
Error in line 226: ufj S143 12,2
Error in line 232: wrH S143 3,0
Error in line 241: A471 A519 51,0
Error in line 242: wrH A471 20,7
Error in line 243: A471 A52 20,4
Error in line 245: A471 A519 46,5
